--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^9.15.0",
     "typescript": "~5.6.2",
     "vite": "^5.4.10",
+    "vite-plugin-dts": "^4.3.0",
     "vitepress": "^1.5.0"
   }
 }
