build: 添加类型声明文件路径和配置优化

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "toast",
     "typescript"
   ],
+  "types": "./dist/simple-message.d.ts",
   "main": "./dist/simple-message.umd.cjs",
   "version": "0.0.1",
   "type": "module",
