--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:demo": "vite build -c vite.config.demo.js"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.15.0",
