--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -39,7 +39,7 @@ jobs:
       - name: Install dependencies
         run: pnpm install
       - name: Build
-        run: pnpm run build
+        run: pnpm run build:demo
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
