feat: 更新package.json

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "toast",
     "typescript"
   ],
+  "files": [
+    "package.json",
+    "dist/"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mizuka-wu/messagejs"
